--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.mvc.dispatch-options-request=true
 
-
 #FOR TEST WITH MAILDEV
 spring.mail.host=localhost
 spring.mail.port=1025
@@ -24,3 +23,16 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 #spring.mail.password=${MAIL_PASSWORD}
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
+
+security.oauth2.client.client-id=162349766407-2qpasbmkesrfjmmtdu9fe5slm9u90qem.apps.googleusercontent.com
+security.oauth2.client.client-secret=9DXdY-QlGe0-aSGeFP3SF2AH
+security.oauth2.client.access-token-uri=https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.user-authorization-uri=https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.token-name=oauth_token
+security.oauth2.client.authentication-scheme=query
+security.oauth2.client.client-authentication-scheme=form
+security.oauth2.client.scope=email
+
+security.oauth2.resource.user-info-uri=https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.prefer-token-info=false
+
